tests/types/errors/unary_bitwise_str_operand.mog
#!strict
str text = "hello";
print(~text);
